<resources>
    <string name="app_name">Food Point</string>
    <string name="nav_feed">Home</string>
    <string name="nav_food">Recipes</string>
    <string name="nav_chat">Chats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Food Point</string>
    <string name="sub_title">A Different Food Experience</string>
    <string name="get_started">Get Started</string>
    <string name="signUp">Sign up</string>
    <string name="have_account">Have account already, Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="new_password">Type your new password</string>
    <string name="reset">reset password</string>
    <string name="notice">By clicking RESET PASSWORD, You will receive an email to reset your password</string>
    <string name="user_name">User name</string>
    <string name="update_profile">Update Profile</string>
    <string name="tap_to_add_photo">Tap to add Photo</string>
    <string name="ricepe_name">Recipe name</string>
    <string name="name">Name</string>
    <string name="prep_time">Prep Time :</string>
    <string name="min">min</string>
    <string name="cook_time">Cook time :</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="add_instructions">add Instructions</string>
    <string name="feed_field">What\'s on your mind ?</string>
    <string name="date_time">Mon at 07:30</string>
    <string name="likes">0 Likes</string>
    <string name="comments">Comments</string>
    <string name="chat">Chat</string>
    <string name="feed">feedTextView</string>
    <string name="type_message">Type a message</string>
    <string name="recipe_writer">Recipe writer</string>
    <string name="add_comment">add comment</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="photo">Photo</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="add_new_post">Add new post</string>
    <string name="new_post">New Post</string>
    <string name="new_recipe">New Recipe</string>
    <string name="profile_settings">Profile Setting</string>
    <string name="empty_message">You can\'t send an empty message</string>
    <string name="logout">Log out</string>
    <string name="provide_user_name">Please provide a username</string>


</resources>
