<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginRelative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/Login_page_toolbar"
        layout="@layout/app_tool_bar">

    </include>


    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/Login_page_toolbar"
        android:alpha="0.9"
        android:scaleType="centerCrop"
        android:src="@drawable/login"
        app:layout_constraintTop_toBottomOf="@+id/Login_page_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginImage">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:background="#2a272d"
            android:onClick="login"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/googleLoginBtn"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp">

        </com.google.android.gms.common.SignInButton>


        <TextView
            android:id="@+id/forgetPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forget_password" />



    </LinearLayout>

</android.support.constraint.ConstraintLayout>