<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">


    <include
        layout="@layout/app_tool_bar"
        android:id="@+id/reset_Password_page_toolbar">

    </include>


    <ImageView
        android:id="@+id/resetImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/reset_Password_page_toolbar"
        android:alpha="0.9"
        android:scaleType="centerCrop"
        android:src="@drawable/resetpassword"
        app:layout_constraintTop_toBottomOf="@+id/reset_Password_page_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resetImageView">


        <EditText
            android:id="@+id/resetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:hint="@string/new_password"
            android:inputType="none"
            android:padding="8dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="reset"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/reset"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textColor="@android:color/black" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>


